Fixed title format on mobile displays < 400px
Previously the title of the website would be displayed improperly when the display was < 400 px
Changes were made to the _header.sass file to accomodate for responsive design

--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -2,7 +2,7 @@
     height: 90px
     #site-title
         float: left
-        margin: 15px 0 0 20px
+        margin: 13px 0 0 20px
         a
             display: inline-block
             font-weight: 700
@@ -16,6 +16,9 @@
             margin-block-start: 0.67em
             b
                 padding-right: 4px
+            @media screen and (max-width: 400px)
+                font-size: 1.5em
+                margin-top: 20px
     #site-nav
         float: right
         margin: 35px 20px 0 0
